Resume and index
Updated resume and index after graduation

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <section class="hero" style="justify-content: center; text-align: center;">
     <div class="hero-text">
       <h1>Akhilesh <span>Kanagali</span></h1>
-      <p>A Computer Science Engineering student with passion for Software Engineering and Game Development.</p>
+      <p>A Computer Science Engineering graduate with passion for Software Engineering and Game Development.</p>
       <a href="resume.pdf" download class="download-btn" id="downloadLink">Download Resume</a>
     </div>
   </section>
@@ -42,7 +42,7 @@
   <section class="about" id="about" style="justify-content: center; text-align: center;">
     <div class="about-text">
       <h2>ABOUT <span>ME</span></h2>
-      <p>I'm Akhilesh Kanagali a Computer Science Engineering student with passion for Software Engineering and Game Development. I love bringing ideas to life through code, whether it's building useful apps or creating engaging gameplay experiences.</p>
+      <p>I'm Akhilesh Kanagali a Computer Science Engineering graduate with passion for Software Engineering and Game Development. I love bringing ideas to life through code, whether it's building useful apps or creating engaging gameplay experiences.</p>
       <p>I enjoy playing and building games, also like to code programs to learn and grow my knowledge. Right now, I'm honing my skills in C#, Python and Godot.</p>
       <p>Outside of coding, you'll probably find me gaming, exploring new tools or expressing creativity through drawing and visual art.</p>
     </div>
@@ -54,6 +54,7 @@
       <div class="skill-card">C/C++</div>
       <div class="skill-card">Python</div>
       <div class="skill-card">C#</div>
+      <div class="skill-card">SQL</div>
       <div class="skill-card">HTML/CSS</div>
       <div class="skill-card">Godot</div>
       <div class="skill-card">Git & GitHub</div>
