--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="about-text">
       <h2>ABOUT <span>ME</span></h2>
       <p>I'm Akhilesh Kanagali a Computer Science Engineering graduate with passion for Software Engineering and Game Development. I love bringing ideas to life through code, whether it's building useful apps or creating engaging gameplay experiences.
-      <br>I enjoy playing and building games, also like to code programs to learn and grow my knowledge. Right now, I'm honing my skills in C#, Python and Godot.
+      <br>I enjoy playing and building games, also like to code programs to learn and grow my knowledge. Right now, I'm honing my skills in Programming, Software Development and Game Development.
       <br>Outside of coding, you'll probably find me gaming, exploring new tools or expressing creativity through drawing and visual art.</p>
     </div>
   </section>
